# quantum-neural-network

./: .classpath  .gitmodules  .project  C:\inetpub\wwwroot\NeuralNetworkCore\Web.config  README.md  ReaAaS_n.ipynb  api_template.py  build.gradle  check_iis_status.ps1  configure_brain_parts.ps1  configure_dream_processor.ps1  configure_fastcgi.ps1  configure_iis_native.ps1  fix_iis_bindings.ps1  fix_iis_prerequisites.ps1  fix_url_rewrite.ps1  iceberg-config.properties  implementation_status.md  install_iis_base.ps1  install_iis_components.ps1  install_iis_core_modules.ps1  install_iis_modules.ps1  install_iis_prerequisites.ps1  reset_iis_config.ps1  setup_fastcgi.ps1  setup_health_checks.ps1  setup_iis_apache.ps1  validate_iis_setup.ps1  web.config
.devcontainer/: devcontainer.json
fred_handler/: agent_based_modeling.py  brain_structure.py  eigenvalue_analysis.py  random_seed_manager.py  visualization.py
integration_tests/: test_iis_apache.py
neural_network/: AccessDatabaseManager.java  DatabaseInitializer.java  agent_based_modeling.py  brain_structure.py  cubic_framework.py  eigenvalue_analysis.py  ffed_framework.py  flywheel_gateway.py  forecast_mesh_integration.py  fossa_data_manager.py  fred_handler.py  h2o_quantum_connector.py  mindsdb_forecast.py  mindsdb_postgresql_connection.py  nerve_subdomain_manager.py  neural_forecast.py  (+9 more)
phi_framework/: CMakeLists.txt  FindOpenBLAS.cmake  FindXCFun.cmake  __init__.py  brain_quantum_config.py  brain_quantum_service.py  cohomology.py  core.py  heisenberg.py  operators.py  requirements.txt  setup.cfg  unified.py  zeta.py
(+18 files in other folders)
